--- a/src/components/styles/ListExpenseorIncome.css
+++ b/src/components/styles/ListExpenseorIncome.css
@@ -5,8 +5,8 @@ ul {
     margin: 0;
     gap: 10px;
     width: 95%;
-    padding: 10px; 
-    overflow-x: hidden; 
+    padding: 10px;
+    overflow-x: hidden;
 }
 
 li {
@@ -16,13 +16,41 @@ li {
     justify-content: space-between;
     list-style: none;
     gap: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: var(--tertiary-bg);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 span {
     width: 35%;
+    font-size: 1rem;
+    word-wrap: break-word;
 }
 
 .edit-button,
 .delete-button {
     width: 15%;
+    min-width: 40px;
+    padding: 5px;
+    text-align: center;
+}
+
+/* Media Query para pantallas pequeñas */
+@media (max-width: 600px) {
+    li {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+
+    span {
+        width: 100%;
+    }
+
+    .edit-button,
+    .delete-button {
+        width: 100%;
+        min-width: auto;
+    }
 }
